--- a/iframe02.html
+++ b/iframe02.html
@@ -9,7 +9,7 @@
     <h1>teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id libero qui accusantium sed ullam amet facilis aut tempore, hic quia ut voluptate itaque atque quam a eaque minus dicta consequatur?</p>
 
-    <iframe src="pagina001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="pagina-extra/pagina001.html" frameborder="0" height="500" width="500"></iframe>
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, doloremque maiores nostrum ipsa sunt dolores laboriosam dolor commodi eum perferendis vero deserunt consectetur qui. Dolor amet deserunt asperiores nesciunt numquam.</p>
 </body>
